syntax = "proto3";

option go_package = "github.com/olive.org/olive/proto/api";
option java_multiple_files = true;
option java_package = "org.olive.server.olive.api";
option java_outer_classname = "OliveApiProto";

package api;

message ProcessDefinitions {
  int64 key = 1;
  int64 process_version = 2;
  string process_id = 3;
  string definitions = 4;
  int64 creation_timestamp = 5;
}

message ProcessInstance { 
  int64 key = 1;
  int64 process_version = 2;
  string process_id = 3;
  int64 start_timestamp = 4;
  int64 end_timestamp = 5;
}

message FlowNode { int64 key = 1; }